# order_service

./: README.md  alembic.ini  docker-compose.yml  dockerfile  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 32dc17f51e70_create_orders_table.py  38d6f2041238_create_outbox_table.py  ad09a135cd95_create_inbox_table.py
src/order_service/api/: dependencies.py
src/order_service/api/routes/: orders.py
src/order_service/application/usecases/: create_order.py  get_order.py  process_outbox_batch.py  run_outbox_worker.py  send_order_notification.py
src/order_service/core/: config.py  exceptions.py
src/order_service/domain/: entities.py  enums.py
src/order_service/infrastructure/clients/: catalog.py  notifications.py  payments.py
src/order_service/infrastructure/db/: models.py  session.py
src/order_service/infrastructure/kafka/: consumer.py  producer.py
src/order_service/infrastructure/repositories/: inbox.py  orders.py  outbox.py
src/order_service/schemas/: orders.py
